<resources>
    <string name="app_name">MySpaceShopping</string>
    <string name="label_businessall">全部商家</string>
    <string name="label_cheap">优惠商家</string>
    <string name="tab_type">全部分类</string>
    <string name="tab_city">全城</string>
    <string name="tab_order">智能排序</string>
    <string name="hint_search">输入商家、分类或商圈</string>
    <string name="title_home">首页</string>
    <string name="title_business">附近</string>
    <string name="title_friends">聚</string>
    <string name="title_myself">我的</string>
    <string name="title_more">更多</string>
    <string name="action_settings">Settings</string>
    <string name="rbtn_application">精品应用</string>
    <string name="title_createpost">发布新东西~</string>
    <string name="hint_text">请输入发布的内容</string>
    <string name="btn_fabu">发布</string>
    <string name="title_news">新消息</string>
    <string name="btn_news_atttmy">关注我的</string>
    <string name="btn_news_pinlun">评论</string>
    <string name="btn_news_dianzan">赞过我的</string>
    <string name="title_ju_person">用户主页</string>
    <string name="btn_ju_upload_enter">上传</string>
    <string name="hint_ju_upload_img">点击图片就可以编辑头像哦~</string>
    <string name="title_login">登录</string>
    <string name="btn_register">注册</string>
    <string name="hint_edit_user_name">手机/邮箱/用户名</string>
    <string name="hint_edit_user_passward">密码</string>
    <string name="link_findPassword">找回密码</string>
    <string name="link_phone_login">手机号快捷登陆</string>
    <string name="rbtn_movie_release">正在热映</string>
    <string name="rbtn_movie_impending">即将上映</string>
    <string name="tab_movie_brand">品牌</string>
    <string name="tab_movie_distance">离我最近</string>
    <string name="tab_movie_effects">特效</string>
    <string name="title_register">立即注册</string>
    <string name="hint_register_edit_user_name">帐号</string>
    <string name="hint_register_edit_user_mail">邮箱</string>
    <string name="hint_test_username">请输入用户名</string>
    <string name="hint_test_userpass">请输入密码</string>
</resources>