<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:id="@+id/btn_movie_back"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/tuihou"/>
        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="10dp">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/rbtn_movie_release"
                android:button="@null"
                android:textColor="#ffffff"
                android:padding="5dp"
                android:text="@string/rbtn_movie_release"
                android:background="#27c48d"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/rbtn_movie_impending"
                android:button="@null"
                android:padding="5dp"
                android:text="@string/rbtn_movie_impending"/>
        </RadioGroup>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/btn_movie_search"
            android:src="@mipmap/sousuo"
            android:layout_marginRight="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btn_movie_brand"
            android:padding="10dp"
            android:gravity="center"
            android:textSize="14sp"
            android:text="@string/tab_movie_brand" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btn_movie_city"
            android:padding="10dp"
            android:gravity="center"
            android:textSize="14sp"
            android:text="@string/tab_city"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btn_movie_distance"
            android:padding="10dp"
            android:gravity="center"
            android:textSize="14sp"
            android:text="@string/tab_movie_distance"
            android:drawableEnd="@mipmap/sanjiaoxing"
            android:drawableRight="@mipmap/sanjiaoxing"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btn_movie_effects"
            android:padding="10dp"
            android:gravity="center"
            android:textSize="14sp"
            android:text="@string/tab_movie_effects"/>

    </LinearLayout>
    <com.handmark.pulltorefresh.library.PullToRefreshListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/list_movie_shop"
        android:dividerHeight="2dp">

    </com.handmark.pulltorefresh.library.PullToRefreshListView>


</LinearLayout>