<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/register_title">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/btn_register"
            android:src="@mipmap/tuihou"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/text_register"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="#000000"
            android:text="@string/title_register"
            />
    </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:id="@+id/lineRegisterUserName"
            android:src="@mipmap/line_gradient"
            android:layout_below="@id/register_title"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_edit_user_name"
            android:layout_below="@id/lineRegisterUserName"
            android:padding="15dp"
            android:hint="@string/hint_register_edit_user_name"
            android:singleLine="true"
            android:background="#FFFFFF"
            />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:id="@+id/lineRegisterUserPaswword"
        android:src="@mipmap/line_gradient"
        android:layout_below="@id/register_edit_user_name"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_edit_user_password"
        android:layout_below="@id/lineRegisterUserPaswword"
        android:padding="15dp"
        android:inputType="textPassword"
        android:hint="@string/hint_edit_user_passward"
        android:singleLine="true"
        android:background="#FFFFFF"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:id="@+id/lineRegisterMail"
        android:src="@mipmap/line_gradient"
        android:layout_below="@id/register_edit_user_password"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_edit_user_mail"
        android:layout_below="@id/lineRegisterMail"
        android:padding="15dp"
        android:hint="@string/hint_register_edit_user_mail"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:background="#FFFFFF"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:id="@+id/lineRegisterMailDown"
        android:src="@mipmap/line_gradient"
        android:layout_below="@id/register_edit_user_mail"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_login"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:text="@string/title_login"
        android:layout_below="@id/lineRegisterMailDown"
        android:background="@drawable/filter_ok_btn_pressed"/>


</RelativeLayout>