<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:id="@+id/main_div_upline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/div_gray" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/btn_type"
            style="@style/rbup_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/tab_type"
            android:textSize="15sp"
            android:drawableRight="@mipmap/sanjiaoxing"/>

        <RadioButton
            android:id="@+id/btn_city"
            style="@style/rbup_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/tab_city"
            android:textSize="15sp"
            android:drawableRight="@mipmap/sanjiaoxing"/>

        <RadioButton
            android:id="@+id/btn_order"
            style="@style/rbup_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/tab_order"
            android:textSize="15sp"
            android:drawableRight="@mipmap/sanjiaoxing"/>
    </RadioGroup>

    <View
        android:id="@+id/main_div_downline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/div_gray" />
</LinearLayout>
